tests/semantica/valid/while/test3.ctds
program 
    {
		bool foo(){
			return true;
		}

		void main(){
			bool z = true;
			while(foo() && z) {
				return;
			}
		}
    }